--- a/testProject/test-output/old/Practice Suite/classes.html
+++ b/testProject/test-output/old/Practice Suite/classes.html
@@ -14,6 +14,14 @@
 <td>testCase3</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>testCase2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testCase1</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
